--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -250,8 +250,10 @@ code {
 .nav-link {
   position: relative;
   padding: 1rem;
+  font-size: 16px;
   font-weight: 500;
   color: #3d3d3b;
+  vertical-align: middle;
 }
 
 .nav-link:hover,
