--- a/templates/upload.html
+++ b/templates/upload.html
@@ -20,7 +20,8 @@
   {% endwith %}
   <p>
   <i class="fa fa-file-image-o fa-fw"></i>
-  {{ form.file(id="file", placeholder="Filename") }}
+  {{ form.file(id="file", placeholder="Filename", style="display:none;") }}
+  <input type="button" class="btn btn-primary" value="Select File" onclick="document.getElementById('file').click();" />
   </p>
   <p>
   <i class="fa fa-pencil fa-fw"></i>
