--- a/templates/vault.html
+++ b/templates/vault.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <script src="{{url_for('static', filename='js/vault.js')}}" type="text/javascript"></script>
+<meta name="csrf-token" content="{{ csrf_token() }}">
 
 <div class="container">
   <div class="page-header">
