Verification and cleanup

--- a/templates/change.html
+++ b/templates/change.html
@@ -20,7 +20,7 @@
     {% endif %}
   {% endwith %}
   <p>
-  {{ form.username(id="username", placeholder="Username or email") }}
+  {{ form.username(id="username") }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
