--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-<form class="form-signin" role="form" method="post" action="">
+<form id="forgot_form" class="form-signin" role="form" method="post" action="">
   <center>
   <h3 class="form-signin-heading">Request Password Reset</h3>
   {{ form.csrf_token }}
