--- a/templates/invite.html
+++ b/templates/invite.html
@@ -23,6 +23,10 @@
   {{ form.email(id="email", placeholder="Email addess") }}
   </p>
   <p>
+  <i class="fa fa-map fa-fw"></i>
+  {{ form.phone(id="country", placeholder="Country code") }}
+  </p>
+  <p>
   <i class="fa fa-phone fa-fw"></i>
   {{ form.phone(id="phone", placeholder="Phone") }}
   </p>
