--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-<form id="change_form" class="form-signin" role="form" method="post" action="" enctype=multipart/form-data>
+<form id="upload_form" class="form-signin" role="form" method="post" action="" enctype=multipart/form-data>
   <center>
   <h3 class="form-signin-heading">Upload Image</h3>
   {{ form.csrf_token }}
