Firecracker meatballs and Andes cookies

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -33,7 +33,7 @@
         <button class="accordion">Bread</button>
         <div class="panel">
           <a href="/recipes?recipe=Anadama%20Bread&category=Bread">Anadama Bread</a><br>
-          <a href="/recipes?recipe=Banana%20Bread&category=Bread">Banana Bread</a><br>
+          <a href="/recipes?recipe=Banana%20Bread&category=Bread">Banana Bread</a>
         </div>
         <button class="accordion">Breakfast</button>
         <div class="panel">
@@ -46,12 +46,13 @@
           <a href="/recipes?recipe=Pumpkin%20Waffles&category=Breakfast">Pumpkin Waffles</a><br>
           <a href="/recipes?recipe=Banana%20Muffins&category=Breakfast">Banana Muffins</a><br>
           <a href="/recipes?recipe=Pumpkin%20Muffins&category=Breakfast">Pumpkin Muffins</a><br>
-          <a href="/recipes?recipe=Turkey%20Sausage&category=Breakfast">Turkey Sausage</a><br>
+          <a href="/recipes?recipe=Turkey%20Sausage&category=Breakfast">Turkey Sausage</a>
         </div>
         <button class="accordion">Dessert</button>
         <div class="panel">
           <a href="/recipes?recipe=Chocolate%20Crunchies&category=Dessert">Chocolate Crunchies</a><br>
           <a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a><br>
+          <a href="/recipes?recipe=Andes%20Chunk%20Cookies&category=Dessert">Andes Chunk Cookies</a><br>
           <a href="/recipes?recipe=Pfeffernusse&category=Dessert">Pfeffernusse</a><br>
           <a href="/recipes?recipe=Pumpkin%20Pie&category=Dessert">Pumpkin Pie</a><br>
           <a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Swedish Pancakes</a>
@@ -67,13 +68,14 @@
           <a href="/recipes?recipe=Moroccan%20Meatballs&category=Mediterranean">Moroccan Meatballs</a><br>
           <a href="/recipes?recipe=Red%20Lamb&category=Mediterranean">Red Lamb</a><br>
           <a href="/recipes?recipe=Red%20Pepper%20Hummus&category=Mediterranean">Red Pepper Hummus</a><br>
-          <a href="/recipes?recipe=Mediterranean%20Chicken&category=Mediterranean">Mediterranean Chicken</a><br>
+          <a href="/recipes?recipe=Mediterranean%20Chicken&category=Mediterranean">Mediterranean Chicken</a>
         </div>
         <button class="accordion">Latin</button>
         <div class="panel">
           <a href="/recipes?recipe=Guacamole&category=Mexican">Guacamole</a><br>
           <a href="/recipes?recipe=Green%20Chili&category=Mexican">Green Chili</a><br>
-          <a href="/recipes?recipe=Meat%20Crumbles&category=Mexican">Meat Crumbles</a>
+          <a href="/recipes?recipe=Firecracker%20Meatballs&category=Mexican">Firecracker Meatballs</a><br>
+          <a href="/recipes?recipe=Meat%20Crumbles&category=Mexican">Meat Crumbles</a><br>
           <a href="/recipes?recipe=Cuban%20Picadillo&category=Mexican">Cuban Picadillo</a>
         </div>
         <button class="accordion">Seafood</button>
