--- a/templates/invite.html
+++ b/templates/invite.html
@@ -7,28 +7,20 @@
   <center>
   <h3 class="form-signin-heading">Invite User</h3>
   {{ form.csrf_token }}
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <font color="red">
-      <ul class="fa-ul">
-      {% for message in messages %}
-        <li><i class="fa fa-exclamation-triangle fa-li fa-lg"></i>{{ message }}</li>
-      {% endfor %}
-      </ul>
-      </font>
-    {% endif %}
-  {% endwith %}
+  {% from "_macros.html" import render_errors, render_messages %}
+  {{ render_errors(form) }}
+  {{ render_messages() }}
   <p>
   <i class="fa fa-envelope-o fa-fw"></i>
-  {{ form.email(id="email", placeholder="Email addess") }}
-  </p>
-  <p>
-  <i class="fa fa-map fa-fw"></i>
-  {{ form.phone(id="country", placeholder="Country code") }}
+  {{ form.email(id="email", placeholder="Email") }}
   </p>
   <p>
   <i class="fa fa-phone fa-fw"></i>
   {{ form.phone(id="phone", placeholder="Phone") }}
+  </p>
+  <p>
+  <i class="fa fa-user-o fa-fw"></i>
+  {{ form.name(id="name", placeholder="Name", title="Name must be at least 2 characters and may not contain any special characters." ) }}
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-user" aria-hidden="true"></i>&nbspInvite</button>
   </center>
