Ratings and decriptions

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -97,6 +97,10 @@ i/* Remove margins and padding from the list */
     background: #ddd;
 }
 
+.star-checked {
+    color: orange;
+}
+
 .gal {
     -webkit-column-count: 3; /* Chrome, Safari, Opera */
     -moz-column-count: 3; /* Firefox */
