--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -109,12 +109,22 @@ i/* Remove margins and padding from the list */
 
 .gal img{ width: 100%; padding: 7px 0;}
 
-@media (max-width: 500px) {
+/* Layout for phones */
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .gal {
     -webkit-column-count: 1; /* Chrome, Safari, Opera */
     -moz-column-count: 1; /* Firefox */
     column-count: 1;
     }
+}
+
+/* Layout for iPads */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .gal {
+    -webkit-column-count: 2; /* Chrome, Safari, Opera */
+    -moz-column-count: 2; /* Firefox */
+    column-count: 2;
+   }
 }
 
 #vaultList ul li.checked::before {
