--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -67,7 +67,7 @@
           <a href="/recipes?recipe=Chicken%20Shawarma&category=Mediterranean">Chicken Shawarma</a><br>
           <a href="/recipes?recipe=Moroccan%20Meatballs&category=Mediterranean">Moroccan Meatballs</a><br>
           <a href="/recipes?recipe=Red%20Lamb&category=Mediterranean">Red Lamb</a><br>
-          <a href="/recipes?recipe=Red%20Pepper%20Hummus&category=Mediterranean">Red Pepper Hummus</a><br>
+          <a href="/recipes?recipe=Hummus&category=Mediterranean">Hummus</a><br>
           <a href="/recipes?recipe=Mediterranean%20Chicken&category=Mediterranean">Mediterranean Chicken</a>
         </div>
         <button class="accordion">Latin</button>
