--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,19 +15,65 @@ body {
   box-sizing: inherit;
 }
 
-/* Layout For Smaller Screens */
-img {
-  display: block;
-  margin: 0 auto 0 auto; /* Centred */
-  width: 100%;
+.gal {
+    -webkit-column-count: 3; /* Chrome, Safari, Opera */
+    -moz-column-count: 3; /* Firefox */
+    column-count: 3;
 }
 
-/* Layout For Larger Screens */
-@media screen and (min-width: 40em) {
+.gal img{ width: 100%; padding: 7px 0;}
+
+.recipe img{ width: 400px; }
+
+.dropdown-menu {
+  background-color: #e5e5e5;
+}
+
+.dropdown-menu li{
+  align: left;
+}
+
+/* Layout for phones */
+@media screen and (min-width: 320px) and (max-width: 767px) {
   img {
-    padding: 0 2em 0 2em;
-    width: 66.6%;
+    display: block;
+    margin: 0 auto 0 auto; /* Centered */
+    width: 100%;
+    max-width: 100%;
   }
+  .carousel {
+    height: 350px;
+  }
+  .carousel-inner img {
+    width: auto;
+    height: 350px;
+  }
+  .gal {
+    -webkit-column-count: 1; /* Chrome, Safari, Opera */
+    -moz-column-count: 1; /* Firefox */
+    column-count: 1;
+   }
+}
+
+/* Layout for iPads */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  img {
+    display: block;
+    margin: 0 auto 0 auto; /* Centered */
+    width: 100%;
+    max-width: 100%;
+  }
+  .carousel {
+    height: 550px;
+  }
+  .carousel-inner img {
+    height: 550px;
+  }
+  .gal {
+    -webkit-column-count: 2; /* Chrome, Safari, Opera */
+    -moz-column-count: 2; /* Firefox */
+    column-count: 2;
+   }
 }
 
 #searchPhrase {
@@ -52,9 +98,9 @@ img {
     border: 1px solid #ddd; /* Add a border to all links */
     margin-top: -1px; /* Prevent double borders */
     background-color: #f6f6f6; /* Grey background color */
-    padding: 12px; /* Add some padding */
+    padding: 4px; /* Add some padding */
     text-decoration: none; /* Remove default text underline */
-    font-size: 18px; /* Increase the font-size */
+    font-size: 16px; /* Increase the font-size */
     color: black; /* Add a black text color */
     display: block; /* Make it into a block element to fill the whole list */
 }
@@ -77,7 +123,7 @@ i/* Remove margins and padding from the list */
     position: relative;
     padding: 12px 8px 12px 40px;
     background: #eee;
-    font-size: 18px;
+    font-size: 14px;
     transition: 0.2s;
 
     /* make the list items unselectable */
@@ -99,32 +145,6 @@ i/* Remove margins and padding from the list */
 
 .star-checked {
     color: orange;
-}
-
-.gal {
-    -webkit-column-count: 3; /* Chrome, Safari, Opera */
-    -moz-column-count: 3; /* Firefox */
-    column-count: 3;
-}
-
-.gal img{ width: 100%; padding: 7px 0;}
-
-/* Layout for phones */
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .gal {
-    -webkit-column-count: 1; /* Chrome, Safari, Opera */
-    -moz-column-count: 1; /* Firefox */
-    column-count: 1;
-    }
-}
-
-/* Layout for iPads */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .gal {
-    -webkit-column-count: 2; /* Chrome, Safari, Opera */
-    -moz-column-count: 2; /* Firefox */
-    column-count: 2;
-   }
 }
 
 #vaultList ul li.checked::before {
@@ -366,21 +386,36 @@ code {
 }
 
 /* Accordian styles */
+.sidebar-module {
+  padding: 15px;
+  margin: 0 -15px 15px;
+}
+
+.sidebar-module-inset {
+  padding: 5px;
+  margin: 0 -15px -15px;
+  background-color: #d5d5d5;
+  border-radius: 4px;
+}
+
 button.accordion {
-    background-color: #eee;
+    background-color: #e5e5e5;
     color: #444;
     cursor: pointer;
-    padding: 2px;
+    padding: 4px;
+    margin-bottom: 1;
     width: 100%;
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+    font-size: 14px;
+    border-radius: 4px;
     transition: 0.4s;
 }
 
 button.accordion.active, button.accordion:hover {
-    background-color: #ddd;
+    background-color: #bbb;
+    color: #555;
 }
 
 button.accordion:after {
@@ -388,16 +423,23 @@ button.accordion:after {
     color: #777;
     font-weight: bold;
     float: right;
-    margin-left: 4px;
+    margin-left: 8px;
 }
 
 button.accordion.active:after {
     content: "\2212";
 }
 
-div.panel {
-    padding: 0 4px;
-    background-color: white;
+.panel a {
+    padding: 0 12px;
+  color: black;
+  font-size: 14px;
+}
+
+.panel {
+    padding: 0px;
+    margin: 0px;
+    background-color: #eff;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
