--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -215,7 +215,7 @@ th {
   background-color: #e5e5e5;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 900px) {
   .main {
     padding-right: 40px;
     padding-left: 40px;
@@ -425,6 +425,8 @@ button.accordion.active:after {
   padding: 0 16px;
   color: black;
   font-size: 14px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .panel a:hover {
